# monad-playground

./: .gitignore  flake.nix  monad-playground.cabal
src/: MyList.hs
test/: Main.hs  Util.hs
test/Tests/: Example.hs
