cabal-version:   3.4
name:            monad-playground

-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.1.0.0

-- synopsis:
-- description:
homepage:        https://github.com/toyboot4e/monad-playground
license:         CC0-1.0
license-file:    LICENSE
author:          toyboot4e
maintainer:      toyboot4e@gmail.com

-- copyright:
build-type:      Simple
-- extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyList

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.19.2.0
  hs-source-dirs:   src
  default-language: GHC2021

executable monad-playground
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base              ^>=4.19.2.0
    , monad-playground

  hs-source-dirs:   app
  default-language: GHC2021

test-suite monad-playground-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base              ^>=4.19.2.0
    , monad-playground
